--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2607,107 +2607,107 @@ stories:
   domain: http://www.indreg.com/
   link: http://indreg.com/2019/06/25/brodhead-schools-areas-of-focus-end-of-year-update/
 images:
-- name: downtheline-downtheline-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-deep-connections.jpg
-- name: cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
-- name: oldcabin-store-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colored-circuits.jpg
-- name: ellis-island-ellis-island-room-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-far-away.jpg
-- name: udnie-IMG_7995.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7995.jpg
-- name: nyc-flag-nycflag-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-crunch-paper.jpg
-- name: machine-road-machine-road-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-plentiful.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
-- name: rockingchair-face-2-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-cinnamon-rolls.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-internet-numbers.jpg
-- name: catacombs-catacombs-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-yellow-collage.jpg
-- name: abandonedbuildings_atari_missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_atari_missle.jpg
-- name: aws-s3-stories-new-68-113-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-113-800-500-0-max-0--1--1.jpg
-- name: blossombar-crafty-painting-file-00-00-50-18.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-18.jpg
-- name: dc-statue-dcstatue-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alberto-giacometti.jpg
-- name: stories-new-desert-dragon-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-desert-dragon-horiz-circuit.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-atari-asteroids.jpg
-- name: flower-barbed-wire-flower-barbed-wire-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-umberto-bocc.jpg
-- name: christianity-christianity-under-construction-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-gred-mash.jpg
-- name: fence-fence-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-really-hot.jpg
-- name: mediterranean-mediterranean-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-atari-missle.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-cinnamon-rolls.jpg
-- name: bluelake-gred-mash-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-00-00.jpg
-- name: oldbarn-oldbarn-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dali-two.jpg
-- name: miamibeach-miamibeach-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dark-soul.jpg
-- name: gypsymosaic-gypsy-eyes-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-post-modern.jpg
-- name: amusement-park-amusement-park-2-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sand-paper.jpg
-- name: server-cloud-server-racks-door-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-plentiful.jpg
-- name: machine-road-machine-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road.jpg
-- name: yosemite-yosemite-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crafty-painting.jpg
-- name: yosemite-yosemite-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-yellow-collage.jpg
-- name: store-on-corner-store-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-graham-sutherland.jpg
-- name: blossombar-smooth-ride-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-smooth-ride-file-00-00-50-62.jpg
-- name: school-clouds-church-clouds-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-spagetti-accident.jpg
-- name: gears-4882162452-fa3126b38d-b-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-rain.jpg
-- name: aws-s3-square-status-berlin-propaganda-leaflets-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-status-berlin-propaganda-leaflets-square.jpg
-- name: aws-s3-stories-new-80-87-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-80-87-800-500-0-max-0--1--1.jpg
-- name: beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
-- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-- name: fence-fence-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-umberto-bocc.jpg
-- name: oldhotel-oldhotel-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-kandinsky-bv.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-clean-view.png
-- name: aws-s3-stories-DSC-0067-alberto-giacometti.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-DSC-0067-alberto-giacometti.JPG
-- name: powerlines-power-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-colored-circuits.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-mucha-mult.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-mucha-mult.JPG
-- name: containership-containership-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-plentiful.jpg
-- name: liberty-back-statue-liberty-back-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-mucha-mult.jpg
-- name: old-door-lock-old-door-lock-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-three.jpg
-- name: curtain-curtain-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-colored-circuits.jpg
-- name: mosaic-face-mosaic-face-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-brush.jpg
-- name: abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-07-91.jpg
+- name: server-cloud-server-racks-door-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-alien-goggles.jpg
+- name: subway-subway-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-plentiful.jpg
+- name: supreme-court-supremecourt-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dali-three.jpg
+- name: capital-battle-capitolbattle-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-rainbow-festival.jpg
+- name: border-crossing-bordercrossing-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-alberto-giacometti.png
+- name: gypsymosaic-gypsy-eyes-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-aqua.jpg
+- name: beach-rocks-beach-rocks-currents-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-diego-rivera1.jpg
+- name: supreme-court-supremecourt-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-smoking-cigarette.jpg
+- name: old-barn-old-barn-1500-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-diego-rivera1.jpg
+- name: old-door-lock-old-door-lock-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-smooth-ride.jpg
+- name: catacombs-catacombs-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-really-hot.jpg
+- name: white-house-lawn-white-house-lawn-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crafty-painting.jpg
+- name: castle-wall-DSC-0067-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purp-paper.JPG
+- name: oldroad-old-road-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-neo-instinct.jpg
+- name: death-valley-death-valley-national-park-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-alberto-giacometti.jpg
+- name: amusement-park-amusement-park-2-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit.jpg
+- name: statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
+- name: oldsmallboat-oldsmallboat-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-satan-red.jpg
+- name: server-cloud-server-racks-door-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-4.jpg
+- name: 35562068104_fa20c57575-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-copper-circuit.jpg
+- name: fence-fence-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-purple-storm.jpg
+- name: stories-servers-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-servers-blue-circuit.jpg
+- name: stories-capital-battle-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-capital-battle-blue-circuit.jpg
+- name: curtain-curtain-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-clean-view.jpg
+- name: lincoln-memorial-lincolnmemorial-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-light-dali.jpg
+- name: old-door-lock-old-door-lock-2-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-matrix.jpg
+- name: beach-clouds-lifeguard-beachclouds-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-deep-connections.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
+- name: amusement-park-amusement-park-2-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-dark-dali.jpg
+- name: amusement-park-amusement-park-2-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-dream.jpg
+- name: store-on-corner-store-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-collage.jpg
+- name: store-on-corner-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-alien-goggles.jpg
+- name: adam-smith-adam-smith-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-purp-paper.jpg
+- name: power-lines-power-lines-empty-space-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-atari-asteroids.jpg
+- name: scream-IMG_7319.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7319.jpg
+- name: gypsymosaic-gypsy-eyes-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-marcel-duchamp.jpg
+- name: carry-load-carryload-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-far-away.jpg
+- name: miamibeach-miamibeach-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-colorful-dream.jpg
+- name: aws-s3-stories-yuma-downtown.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-yuma-downtown.jpg
+- name: bluelake-deep-connections-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-deep-connections-file-00-00-00-00.jpg
+- name: nazi-invasion-DSC_0048.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0048.jpg
+- name: old-granary-field-granaryfield-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-marcel-duchamp.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
+- name: server-cloud-server-racks-clouds-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-paper.jpg
+- name: hollywood-building-hollywood-building-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purple-pond.jpg
+- name: white-house-lawn-white-house-lawn-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alberto-giacometti.jpg
+- name: aws-s3-stories-soldier-computer-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-soldier-computer-dark-dali.jpg
+- name: server-cloud1-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-copper-circuit.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-clean-view.jpg
+- name: mediterranean-mediterranean-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-mucha-mult.jpg
+- name: school-clouds-church-clouds-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit-5.jpg
 ---
 Mad River Taste Week Kicks Off With A Pig Roast.&nbsp;River Accidents Can Happen In A 'split Second'.&nbsp;With 'fine Place In The Standings,' Brewers Head To Second Half Of Season.&nbsp;Summer Pastimes For The Soul.&nbsp;53rd Annual Seaside Beach Run Has Races For Everyone.&nbsp;Americas High School Pageant Contestants Make Stop At JJs Restaurant.&nbsp;The Moon Landing Was A Giant Leap For Movies, Too.&nbsp;Steel Curtain Roller Coaster To Open Saturday At Kennywood.&nbsp;
